# PepalBot

./: Cargo.toml  README.md
src/: main.rs
src/structz/: users.rs
